--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGO_URI='mongodb+srv://Technicalabhi:9709792120@fullstack-subscription.zooyshr.mongodb.net/?retryWrites=true&w=majority'
+
+JWT_SECRET=uigkufikuflifidf.igogkyftjdrhtjytshh
+COOKIE_EXPIRES_TIME=30
